[project]
name = "yolov9py"
version = "0.1"
description = "YOLOv9 object detection model"
authors = [{name = "Rinor Ajeti", email = "r4ajeti@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.6"
dependencies = [
    "numpy==1.26.4",
    "opencv-python-headless",
    "opencv-contrib-python-headless",
    "scipy",
    "beautifulsoup4",
    "alive_progress==3.1.5",
    "gitpython",
    "ipython",
    "matplotlib",
    "Pillow",
    "psutil",
    "PyYAML",
    "requests",
    "thop",
    "tqdm",
    "pandas>=1.1.4",
    "seaborn>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "tensorboard>=2.4.1",
    "albumentations>=1.0.3",
    "pycocotools>=2.0"
]

[project.urls]
Homepage = "https://github.com/R4Ajeti/yolov9"
