[project]
name = "yolov9py"
version = "0.1"
description = "YOLOv9 object detection model"
authors = [{name = "Rinor Ajeti", email = "r4ajeti@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.6"
dependencies = [
    "numpy",
    "opencv-python-headless",
    "opencv-contrib-python-headless",
    "scipy",
    "beautifulsoup4",
    "alive_progress==3.1.5",
    "gitpython",
    "ipython",
    "matplotlib",
    "Pillow",
    "psutil",
    "PyYAML",
    "requests",
    "thop",
    "tqdm",
    "pandas",
    "seaborn",
    "torch --index-url https://download.pytorch.org/whl/cpu",
    "torchvision --index-url https://download.pytorch.org/whl/cpu",
]

[project.optional-dependencies]
dev = [
    "tensorboard>=2.4.1",
    "albumentations>=1.0.3",
    "pycocotools>=2.0"
]

[project.urls]
Homepage = "https://github.com/R4Ajeti/yolov9"

